@@ -1,0 +1,3 @@
+<?xml version="1.0"?>
+<this><sub-inc>is a test
+</sub-inc></this>
