@@ -1,0 +1,2 @@
+<sub-inc><xinc:include href="inc.txt" parse="text" 
+         xmlns:xinc="http://www.w3.org/2001/XInclude"/></sub-inc>
